# Video-to-BootAnimation-Creator-Script

./: Cargo.toml  LICENSE  README.md  boot2mp4.sh  bootc  cbootanim.sh  cbootanimation.cpp  genbootanim.sh  install.sh  winbootnc.ps1
src/: boot2vid.rs  vid2boot.rs
